# carbonyl

./: build.rs  package.json  readme.md
.github/workflows/: release.yml
chromium/: .gclient
chromium/patches/chromium/: 0001-Add-Carbonyl-library.patch  0002-Add-Carbonyl-service.patch  0003-Setup-shared-software-rendering-surface.patch  0004-Setup-browser-default-settings.patch  0005-Remove-some-debug-assertions.patch  0006-Setup-display-DPI.patch  0007-Disable-text-effects.patch  0008-Fix-text-layout.patch  0009-Bridge-browser-into-Carbonyl-library.patch  0010-Conditionally-enable-text-rendering.patch  0011-Rename-carbonyl-Renderer-to-carbonyl-Bridge.patch  0012-Refactor-rendering-bridge.patch  0013-Move-Skia-text-rendering-control-to-bridge.patch  0014-Fix-trailing-whitespace-after-Chromium-147-rebase.patch  0015-Fix-Chromium-147-local-build-blockers.patch  0016-Fix-macOS-CLT-bitmap-byte-order-constant.patch  0017-Use-NSScreenNumber-for-display-lookup-on-CLT.patch
scripts/: build.sh  carbonyl  env.sh  gn.sh  package.sh  patches.sh  platform-triple.sh  run.sh
src/browser/: BUILD.gn  args.gn  bridge.rs  host_display_client.cc  host_display_client.h  renderer.cc
src/output/: renderer.rs
