headless_enable_commands = false
headless_use_embedded_resources = true

# Enable proprietary codecs such as H.264
ffmpeg_branding = "Chrome"
proprietary_codecs = true

# Disable unused dependencies
ozone_platform = "headless"
ozone_platform_x11 = false
ozone_platform_wayland = false

use_static_angle = true

use_qt = false
use_gio = false
use_gtk = false
use_cups = false
use_dbus = false
use_glib = false
use_libpci = false
use_kerberos = false
use_vaapi_x11 = false
use_xkbcommon = false

angle_use_x11 = false
angle_use_wayland = false

rtc_use_x11 = false
rtc_use_pipewire = false
rtc_use_x11_extensions = false

# Linux only
# use_wayland_gbm = false
# use_system_libdrm = false
# use_system_minigbm = false

# Chromium 147 still wires several test/browser targets through these feature
# flags during GN generation, so keep the upstream-compatible defaults here.
enable_pdf = true
enable_nacl = false
enable_ppapi = false
enable_printing = true
enable_print_content_analysis = true
enable_plugins = true
enable_rust_json = false
enable_tagged_pdf = true
enable_media_remoting = true
enable_speech_service = true
enable_screen_ai_service = true
enable_system_notifications = true
enable_browser_speech_service = true
enable_webui_certificate_viewer = true
